<resources>
    <string name="app_name">Dustmo</string>
    <string name="home_text">Dustmo</string>
    <string name="settings_button_cd">Settings</string>
    <string name="account_button_cd">Account</string>
    <string name="current_weather_button_cd">Current Weather</string>
    <string name="air_quality_button_cd">Air Quality</string>
    <string name="air_quality_text">Air Quality</string>
    <string name="weather_text">Weather</string>
    <string name="account_text">Account</string>
    <string name="settings_text">Settings</string>
    <string name="temp_text">Temp</string>
    <string name="data_fetch_error">Error fetching Data</string>
    <string name="api_not_free">$$$</string>
    <string name="temperature">Temperature : </string>
    <string name="humidity"> : Humidity</string>
    <string name="air_pressure">Air Pressure : </string>
    <string name="altitude"> : Altitude</string>
    <string name="sensor_1">"Sensor : "</string>
    <string name="temp_sensor_name">(sensor name)</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="error_view">An Error has Occurred\nPlease Check\nYour Internet Connection\nAnd Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading\nPlease Wait</string>
    <string name="wind_speed">: Wind Speed</string>
    <string name="wind_direction">Wind Direction :</string>
    <string name="pollen_index">: Pollen Index</string>
    <string name="rainfall">Rainfall :</string>
    <string name="cloud_cover">Cloud Cover :</string>
    <string name="maximum">: Maximum</string>
    <string name="minimum">Minimum :</string>
    <string name="feels_like">: Feels Like</string>
    <string name="currently">Currently :</string>
    <string name="weather_button">Weather</string>
    <string name="account_button">Account</string>
    <string name="settings_button">Settings</string>
    <string name="air_quality_button">Air Quality</string>
</resources>
