<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    style="@style/app_background">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/temp_logo_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:showIn="@layout/activity_main"
            android:contentDescription="@string/temp_text"
            style="@style/header_style"/>

        <Button
            android:id="@+id/air_quality_button"
            android:layout_margin="20sp"
            android:contentDescription="@string/air_quality_button_cd"
            android:drawableTop="@drawable/air_img"
            android:text="@string/air_quality_button"
            style="@style/main_button_text"
            android:background="@drawable/rounded_corners"
            android:cropToPadding="true"
            android:padding="5sp"
            app:layout_constraintTop_toBottomOf="@id/header_image"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintWidth_percent=".4"
            />
        <Button
            android:id="@+id/current_weather_button"
            android:layout_margin="20sp"
            android:drawableTop="@drawable/weather_img"
            android:text="@string/weather_button"
            style="@style/main_button_text"
            android:background="@drawable/rounded_corners"
            android:cropToPadding="true"
            android:padding="5sp"
            app:layout_constraintTop_toBottomOf="@id/header_image"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/current_weather_button_cd"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintWidth_percent=".4" />
        <Button
            android:id="@+id/account_button"
            android:layout_margin="20sp"
            android:contentDescription="@string/account_button_cd"
            android:drawableTop="@drawable/account_img"
            android:text="@string/account_button"
            style="@style/main_button_text"
            android:background="@drawable/rounded_corners"
            android:cropToPadding="true"
            android:padding="5sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/air_quality_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintWidth_percent=".4"/>
        <Button
            android:id="@+id/settings_button"
            android:layout_margin="20sp"
            android:contentDescription="@string/settings_button_cd"
            android:drawableTop="@drawable/settings_img"
            android:text="@string/settings_button"
            style="@style/main_button_text"
            android:background="@drawable/rounded_corners"
            android:cropToPadding="true"
            android:padding="5sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_weather_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintWidth_percent=".4"
            />




</androidx.constraintlayout.widget.ConstraintLayout>