<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".weather.WeatherActivity"
    style="@style/app_background">
    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/temp_logo_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:showIn="@layout/activity_main"
        android:contentDescription="@string/temp_text"
        style="@style/header_style"/>
    <View
        android:id="@+id/divider_alpha"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        android:layout_margin="10sp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_alpha">
        <ProgressBar
            android:id="@+id/weather_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            style="@style/data_title"
            app:layout_constraintTop_toBottomOf="@id/weather_progress"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_alpha"
        android:visibility="gone">
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/location_title"
        android:text="@string/temp_text"
        style="@style/header_style"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:background="@drawable/gradient"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/location_title"
        app:layout_constraintBottom_toTopOf="@id/description_title"
        android:importantForAccessibility="no" />
    <TextView
        android:id="@+id/description_title"
        android:text="@string/temp_text"
        style="@style/data_output"
        app:layout_constraintTop_toBottomOf="@id/location_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/temp_title"
        android:text="@string/currently"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/data_title" />
    <TextView
        android:id="@+id/temp_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        app:layout_constraintStart_toEndOf="@id/temp_title"
        style="@style/data_output" />
    <TextView
        android:id="@+id/feels_like_title"
        style="@style/data_title"
        android:text="@string/feels_like"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/feels_like_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/description_title"
        app:layout_constraintEnd_toStartOf="@id/feels_like_title"/>
    <TextView
        android:id="@+id/min_temp_title"
        style="@style/data_title"
        android:text="@string/minimum"
        app:layout_constraintTop_toBottomOf="@id/temp_title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/min_temp_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/temp_output"
        app:layout_constraintStart_toEndOf="@id/min_temp_title"/>
    <TextView
        android:id="@+id/max_temp_title"
        style="@style/data_title"
        android:text="@string/maximum"
        app:layout_constraintTop_toBottomOf="@id/feels_like_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/max_temp_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/feels_like_output"
        app:layout_constraintEnd_toStartOf="@id/max_temp_title"/>
    <TextView
        android:id="@+id/cloud_title"
        style="@style/data_title"
        android:text="@string/cloud_cover"
        app:layout_constraintTop_toBottomOf="@id/min_temp_title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/cloud_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/min_temp_output"
        app:layout_constraintStart_toEndOf="@id/cloud_title"/>
    <TextView
        android:id="@+id/humidity_title"
        style="@style/data_title"
        android:text="@string/humidity"
        app:layout_constraintTop_toBottomOf="@id/max_temp_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/humidity_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/max_temp_output"
        app:layout_constraintEnd_toStartOf="@id/humidity_title"/>
    <TextView
        android:id="@+id/rainfall_title"
        style="@style/data_title"
        android:text="@string/rainfall"
        app:layout_constraintTop_toBottomOf="@id/cloud_title"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/rainfall_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/cloud_title"
        app:layout_constraintStart_toEndOf="@+id/rainfall_title"/>
    <TextView
        android:id="@+id/pollen_title"
        style="@style/data_title"
        android:text="@string/pollen_index"
        app:layout_constraintTop_toBottomOf="@id/humidity_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--Pollen count is not provided under a free trial so I have been unable to include this data in prototype-->
    <TextView
        android:id="@+id/pollen_output"
        style="@style/data_output"
        android:text="@string/api_not_free"
        app:layout_constraintTop_toBottomOf="@id/humidity_output"
        app:layout_constraintEnd_toStartOf="@id/pollen_title"/>
    <TextView
        android:id="@+id/wind_direction_title"
        style="@style/data_title"
        android:text="@string/wind_direction"
        app:layout_constraintTop_toBottomOf="@id/rainfall_title"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/compass"
        android:background="@drawable/gradient"
        android:layout_margin="10sp"
        app:layout_constraintTop_toBottomOf="@id/rainfall_title"
        app:layout_constraintStart_toEndOf="@id/wind_direction_title"
        android:importantForAccessibility="no"
    />
    <ImageView
        android:id="@+id/wind_direction_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wind_direction"
        android:layout_margin="10sp"
        android:rotation="0"
        app:layout_constraintTop_toBottomOf="@+id/compass"
        app:layout_constraintBottom_toTopOf="@+id/compass"
        app:layout_constraintStart_toEndOf="@+id/compass"
        app:layout_constraintEnd_toStartOf="@+id/compass"
        android:importantForAccessibility="no"
    />
    <TextView
        android:id="@+id/wind_speed_title"
        style="@style/data_title"
        android:text="@string/wind_speed"
        app:layout_constraintTop_toBottomOf="@id/pollen_title"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/wind_speed_output"
        style="@style/data_output"
        android:text="@string/temp_text"
        app:layout_constraintTop_toBottomOf="@id/pollen_title"
        app:layout_constraintEnd_toStartOf="@id/wind_speed_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_alpha"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_view"
            style="@style/data_title"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/refresh_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/refresh"
        android:drawableStart="@drawable/refresh_button"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20sp"
        android:padding="10sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>