<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".airquality.AirQualityActivity"
    style="@style/app_background"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/temp_logo_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:showIn="@layout/activity_main"
        android:contentDescription="@string/temp_text"
        style="@style/header_style"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/air_quality_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_image">
        <ProgressBar
            android:id="@+id/air_quality_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            style="@style/data_title"
            app:layout_constraintTop_toBottomOf="@id/air_quality_progress"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/air_quality_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        android:visibility="gone">
        <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10sp"/>
    <TextView
        android:id="@+id/sensor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_1"
        app:layout_constraintTop_toBottomOf="@id/divider_top"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/data_title"/>
    <TextView
        android:id="@+id/sensor_name"
        android:text="@string/temp_sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider_top"
        app:layout_constraintLeft_toRightOf="@id/sensor_title"
        style="@style/data_output"/>
    <TextView
        android:id="@+id/sensor_temp_title"
        android:text="@string/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_title"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/data_title"/>
    <TextView
        android:id="@+id/sensor_temp_output"
        android:text="@string/temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_title"
        app:layout_constraintLeft_toRightOf="@id/sensor_temp_title"
        style="@style/data_output"/>
    <TextView
        android:id="@+id/sensor_humidity_title"
        android:text="@string/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_title"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/data_title"/>
    <TextView
        android:id="@+id/sensor_humidity_output"
        android:text="@string/temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_title"
        app:layout_constraintRight_toLeftOf="@id/sensor_humidity_title"
        style="@style/data_output"/>
    <TextView
        android:id="@+id/sensor_pressure_title"
        android:text="@string/air_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_temp_title"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/data_title"/>
    <TextView
        android:id="@+id/sensor_pressure_output"
        android:text="@string/temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_temp_title"
        app:layout_constraintLeft_toRightOf="@id/sensor_pressure_title"
        style="@style/data_output"/>
    <TextView
        android:id="@+id/sensor_altitude_title"
        android:text="@string/altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_humidity_title"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/data_title"/>
    <TextView
        android:id="@+id/sensor_altitude_output"
        android:text="@string/temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sensor_humidity_title"
        app:layout_constraintRight_toLeftOf="@id/sensor_altitude_title"
        style="@style/data_output"/>
    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@id/sensor_altitude_title"
        android:layout_margin="10sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/air_quality_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_image"
        android:visibility="gone"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_view"
        style="@style/data_title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:drawableStart="@drawable/add_button"
        android:text="@string/add_sensor"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sensor_refresh"
        android:layout_marginBottom="20sp"
        android:padding="10sp"/>
    <Button
        android:id="@+id/sensor_refresh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/refresh"
        android:drawableStart="@drawable/refresh_button"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20sp"
        android:padding="10sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>